--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "testing",
+  "name": "jsappredd",
   "version": "1.0.0",
-  "description": "",
+  "description": "learning",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bumpymcgump/jsappredd.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bumpymcgump/jsappredd/issues"
+  },
+  "homepage": "https://github.com/bumpymcgump/jsappredd#readme"
 }
